# scail-2-mlx

./: .gitignore  NOTICE  PORT-PLAN.md  README.md  pyproject.toml
recipes/: convert_scail2.py  quantize_dit.py
scail2_mlx/: scail.py
scail2_mlx.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scail2_mlx/configs/: __init__.py  scail_config_14B.py
scail2_mlx/modules/: attention.py  clip.py  model_scail2.py
scail2_mlx/utils/: quant.py  scail_utils.py  vae_stream.py  weights.py
scripts/: generate.py
tests/parity/: _helpers.py  conftest.py  test_batched_cfg_parity.py  test_clip_parity.py  test_model_forward_parity.py  test_pipeline_utils_parity.py  test_rope_parity.py  test_scail_utils_parity.py  test_vae_decode_parity.py
tests/smoke/: test_quantize_smoke.py
